--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.20",
     "otp-generator": "^4.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0"
   }
 }
