--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -22,5 +23,8 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.20",
     "otp-generator": "^4.0.1"
+  },
+  "devDependencies": {
+    "prisma": "^5.7.0"
   }
 }
