--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
     "@prisma/client": "^5.7.0",
     "@prisma/migrate": "^5.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "google-auth-library": "^9.4.2",
+    "googleapis": "^131.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.20",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^8.55.0",
