--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" ",
     "start": "nodemon index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -25,8 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
-    "nodemailer-smtp-transport": "^2.7.4",
-    "nodemon": "^2.0.20",
+    "nodemailer-smtp-transport": "^2.4.2",
+    "nodemon": "^3.1.0",
     "otp-generator": "^4.0.1",
     "path": "^0.12.7"
   },
